# neural-galaga

./: .gitignore  Cargo.toml  README.md
checkpoints/cheats/: training_log.csv
crates/neural-galaga-ai/: Cargo.toml
crates/neural-galaga-ai/src/: env.rs  lib.rs  obs.rs  ppo.rs
crates/neural-galaga-cheats/: Cargo.toml
crates/neural-galaga-cheats/src/: lib.rs  model.rs  ppo.rs
crates/neural-galaga-core/: Cargo.toml
crates/neural-galaga-core/src/: constants.rs  enemies.rs  framebuffer.rs  game.rs  lib.rs  session.rs  shield.rs  sprites.rs  starfield.rs  text.rs
crates/neural-galaga-realtime/: Cargo.toml
crates/neural-galaga-realtime/src/: lib.rs  main.rs  render.rs  upscaler.wgsl
crates/neural-galaga-ui/: Cargo.toml
crates/neural-galaga-ui/src/: audio.rs  game.rs  input.rs  main.rs  render.rs
scripts/: plot_training.py
